[tool.poetry]
name = "warp"
version = "0.1.0"
description = ""
authors = ["Dallas Miller <dallmill@cisco.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
Cython = "^0.29.35"
paramiko = "^3.2.0"
plac = "^1.3.5"
ecdsa = "^0.18.0"
udt4py = "1.2"
rpyc = "^5.3.1"
blessings = "^1.7"
mock = "^5.0.2"

[tool.poetry.dev-dependencies]
types-paramiko = "^3.2.0"
types-mock = "^5.0.0"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
